# QuestionsApp

./: .dockerignore  .env-example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-dev.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 9cbfa7101e6f_init.py
src/: main.py  utils.py
src/core/: settings.py
src/db/: models.py  session.py
src/question/: models.py  router.py  services.py  sqlalch.py
src/repositories/: sqlalch.py
src/schemas/: question.py
src/services/: question.py
